--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,54 +1,83 @@
-.theme{
-  padding: 0%;
-  width: 70%;
-  margin-left: 200px;
-  margin-top: 80px;
-
-}
-
-.dev{
-    width: 220px;
-    padding: 0%;
-    margin-left: 600px;
-    color: antiquewhite;
-    border-radius: 0%;
-    border-style: solid;
-    border-color: #88ba0000;
-
-    
-}
-
-button{
-    width: 95px;
-    padding: 0px;
-    border-radius: 100%;
-    background-color: rgba(0, 0, 0, 0);
-    border-style: hidden;
-    margin-left: 669px;
-    margin-top: 50px;
-    
-}
-.play{
-    width: 90px;
-    padding:0%;
-    border-radius: 100%;
-    border-color: #88ba00;
-    border-style: hidden;
-    margin-left: 0%;
-    }
-.play:hover{
-     border-color: #990d0d;
-     border-style:double;
-
-}
-
-.start{
-    width: 65px;
+body{
+    margin: 0;
     padding: 0;
-    color:#ba0000;
-    border-color: #00000000;
-    border-style: solid;
-    margin-left: 660px;
-    margin-top: 0px;
-    font-family: Copperplate, Papyrus, fantasy;
+    margin: 0 auto;
 }
+
+.theme{
+    padding: 0%;
+    width: 70%;
+    margin-left: 200px;
+    margin-top: 80px;
+  
+  }
+  
+  .dev{
+      width: 220px;
+      padding: 0%;
+      margin-left: 600px;
+      color: antiquewhite;
+      border-radius: 0%;
+      border-style: solid;
+      border-color: #88ba0000;
+      text-align: center;
+  
+      
+  }
+  
+  button{
+      width: 95px;
+      padding: 0px;
+      border-radius: 100%;
+      background-color: rgba(0, 0, 0, 0);
+      border-style: hidden;
+      margin-left: 669px;
+      margin-top: 50px;
+      
+  }
+  .play{
+      width: 90px;
+      padding:0%;
+      border-radius: 100%;
+      border-color: #88ba00;
+      border-style: hidden;
+      margin-left: 0%;
+      }
+  .play:hover{
+       border-color: #990d0d;
+       border-style:double;
+  
+  }
+  
+  .start{
+      width: 65px;
+      padding: 0;
+      color:#ba0000;
+      border-color: #00000000;
+      border-style: solid;
+      margin-left: 660px;
+      margin-top: 0px;
+      font-family: Copperplate, Papyrus, fantasy;
+  }
+  
+  @media screen and (max-width: 768px) {
+      button, .start {
+          margin-left: 50px;        
+          width: 80%;
+          padding: 0%;
+          text-align: center;
+          margin-top: 0px;
+
+      }
+      
+  }
+
+  @media screen and (max-width: 768px) {
+     .theme{
+        width: 80%;
+        padding: 0%;
+        margin-left: 50px;
+     }
+
+  }
+
